refactor: add type input for ConfirmBlockchain & AddWallet
