# docs/swagger.yaml
@@ -1,5 +1,21 @@
 basePath: /api/v1
 definitions:
+  http.AddWalletRequest:
+    properties:
+      wallet_address:
+        type: string
+    required:
+    - wallet_address
+    type: object
+  http.ConfirmBlockchainRequest:
+    properties:
+      blockchain_txhash:
+        type: string
+      on_blockchain:
+        type: boolean
+    required:
+    - blockchain_txhash
+    type: object
   httpErrors.RestError:
     properties:
       error:
@@ -673,6 +689,8 @@ paths:
       - Auth
   /auth/logout:
     post:
+      consumes:
+      - application/json
       description: Invalidate the current session and remove session cookie
       produces:
       - application/json
@@ -713,6 +731,80 @@ paths:
       summary: Get current authenticated user
       tags:
       - Auth
+  /driver-license/{id}/add-wallet:
+    put:
+      consumes:
+      - application/json
+      description: Add or update wallet address for a driving license
+      parameters:
+      - description: Driving License ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Wallet address details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/http.AddWalletRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.DrivingLicense'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpErrors.RestError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpErrors.RestError'
+      security:
+      - JWT: []
+      summary: Add wallet address
+      tags:
+      - DrivingLicense
+  /driver-license/{id}/confirm-blockchain:
+    put:
+      consumes:
+      - application/json
+      description: Update blockchain transaction hash and set on_blockchain to true
+      parameters:
+      - description: Driving License ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Blockchain confirmation details
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/http.ConfirmBlockchainRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.DrivingLicense'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpErrors.RestError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpErrors.RestError'
+      security:
+      - JWT: []
+      summary: Confirm blockchain storage
+      tags:
+      - DrivingLicense
   /licenses/{address}:
     get:
       description: Get a single driving license by its Wallet Address
@@ -845,80 +937,6 @@ paths:
       security:
       - JWT: []
       summary: Update a driving license
-      tags:
-      - DrivingLicense
-  /licenses/{id}/add-wallet:
-    put:
-      consumes:
-      - application/json
-      description: Add or update wallet address for a driving license
-      parameters:
-      - description: Driving License ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Wallet address
-        in: body
-        name: wallet
-        required: true
-        schema:
-          $ref: '#/definitions/models.DrivingLicense'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.DrivingLicense'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httpErrors.RestError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httpErrors.RestError'
-      security:
-      - JWT: []
-      summary: Add wallet address
-      tags:
-      - DrivingLicense
-  /licenses/{id}/confirm-blockchain:
-    put:
-      consumes:
-      - application/json
-      description: Update blockchain transaction hash and set on_blockchain to true
-      parameters:
-      - description: Driving License ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Blockchain details
-        in: body
-        name: blockchain
-        required: true
-        schema:
-          $ref: '#/definitions/models.DrivingLicense'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.DrivingLicense'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httpErrors.RestError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httpErrors.RestError'
-      security:
-      - JWT: []
-      summary: Confirm blockchain storage
       tags:
       - DrivingLicense
   /licenses/create:
